algumas funções novas no HTML e CSS

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <body>
         <header>
             <div class="links">
-                <a href="/">Sobre</a>
-                <a href="/">Aulas</a>
-                <a href="http://127.0.0.1:5500/rocketseat.html" target="_blank">Sobre</a>
+                <a href="index.html">Sobre</a>
+                <a href="classes.html">Aulas</a>
             </div>
             
         </header>
